@@ -1,8 +1,9 @@
 ## 待完善任务项
- - admin-server 中 hystrix-dashboard 优化升级
- - admin-server 未完成的监控服务
-    1. https://www.cnblogs.com/shunyang/p/7011306.html
-    2. https://www.jianshu.com/p/6b7f0488ddff
-    3. http://blog.csdn.net/u010889990/article/details/78889730
+ - 模块化改造 acp 及 cloud 下各封装组建
+ - jdk 9+ 版本中 spring 反射非法访问
+    临时解决方法是在启动脚本中增加如下jvm参数，待spring版本更新至5.1.0之后将会修复此问题
+```
+--add-opens java.base/java.lang=ALL-UNNAMED
+```
  - 分布式调度服务
  - 增加 HTTP/2、WebSocket demo
